# DeepEPRI

./: README.md  model.py  pyproject.toml  sequence_processing.py  test.py  train.py
data/: Data_Augmentation.R  H1.csv  HepG2.csv  IMR90.csv  K562.csv
