[tool.poetry]
name = "algorithm"
version = "0.1.0"
description = ""
authors = ["diklios <47837462+diklios5768@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

# 清华
[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "aliyun-source"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
# tools
python-dotenv = "^1.0.0"
click = "^8.1.3"
requests = "^2.28.1"
tqdm = "^4.64.0"
typer = { extras = ["all"], version = "^0.7.0" }
joblib = "^1.2.0"
munch = "^2.5.0"
# poetry plugin
poethepoet = "^0.16.2"
# table
pandas = "^1.4.3"
openpyxl = "^3.0.10"
xlsxwriter = "^3.0.3"
prettytable = "^3.4.1"
# jupyter
jupyterlab = "^3.4.5"
jupyter = "^1.0.0"
notebook = "^6.4.12"
# fig
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
visdom = "^0.1.8.9"
pydotplus = "^2.0.2"
graphviz = "^0.20.1"
# HTML
dominate = "^2.7.0"
grad-cam = "^1.4.6"
varname = "^0.11.0"


[tool.poetry.group.doc.dependencies]
python-docx = "^0.8.11"
PyPDF2 = "^2.10.4"

[tool.poetry.group.image.dependencies]
opencv-python = "4.5.5.64"
Pillow = "^9.2.0"
imutils = "^0.5.4"

[tool.poetry.group.nlp.dependencies]
transformers = "^4.20.1"
jieba = "^0.42.1"

[tool.poetry.group.ml.dependencies]
scikit-learn = "^1.1.1"
scikit-image = "^0.19.3"
keras = "^2.9.0"
scipy = "^1.8.1"
sympy = "^1.10.1"
fastai = "^2.7.11"
mlxtend = "^0.21.0"

[tool.poetry.group.dl.dependencies]
einops = "^0.4.1"
wandb = "^0.13.3"
tensorboard = "^2.10.0"
tensorboardX = "^2.5.1"
tensorlayer = "^2.2.5"

[tool.poetry.group.torch.dependencies]
#torchvision安装可能有问题，最好手动使用命令安装`
albumentations = "^1.3.0"
accelerate = "^0.16.0"
timm = "^0.6.7"
torchgeometry = "^0.1.2"
torchsummary = "^1.5.1"
torchkeras = "^3.2.3"
torchsampler = "^0.1.2"
pytorch-lightning = "^1.9.4"

[tool.poetry.group.openmmlab.dependencies]
openmim = "^0.3.1"

[tool.poetry.group.tensorflow.dependencies]
tensorflow = "^2.9.1"

[tool.poetry.group.gpu.dependencies]
gpustat = "^1.0.0"

[tool.poe.tasks.torch-cpu]
cmd = "pip3 install torch torchvision torchaudio"

[tool.poe.tasks.torch-cpu-conda]
cmd = "conda install pytorch torchvision torchaudio cpuonly -c pytorch"


[tool.poe.tasks.torch-gpu]
cmd = "pip install torch torchvision torchaudio --upgrade --extra-index-url https://download.pytorch.org/whl/${CUDA}"
args = [
    { name = "CUDA", default = "cu116", positional = true, help = "CUDA version" }
]

[tool.poe.tasks.torch-gpu-conda]
cmd = "conda install pytorch torchvision torchaudio cudatoolkit=${CUDA} -c pytorch -c conda-forge"
args = [
    { name = "CUDA", default = "11.6", positional = true, help = "CUDA version" }
]

[tool.poe.tasks.mmcv]
cmd = "mim install mmcv-full"

[tool.poe.tasks.R]
cmd = "conda install r-irkernel -c r -y"

[tool.poe.tasks.cplusplus]
cmd = "conda install xeus-cling -c conda-forge -y"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
